Add StockReports, New statements tab implmenented at Stocks
